<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_label_01"
        android:id="@+id/ViewLabel01"
        android:width="200dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_label_02"
        android:id="@+id/ViewLabel02"
        android:width="200dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ViewButton01" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_label_03"
        android:id="@+id/ViewLabel03"
        android:width="200dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ViewLabel02"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_label_04"
        android:id="@+id/ViewLabel04"
        android:width="200dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ViewLabel03"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_label_05"
        android:id="@+id/ViewLabel05"
        android:width="200dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ViewButton04"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_label_06"
        android:id="@+id/ViewLabel06"
        android:width="200dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ViewLabel05"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_label_07"
        android:id="@+id/ViewLabel07"
        android:width="200dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ViewLabel06"/>

    <Button
        android:id="@+id/ViewButton01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:width="200dp"
        android:text="@string/go"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@id/ViewLabel01"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ViewButton02"
        android:text="@string/go"
        android:width="200dp"
        app:layout_constraintLeft_toRightOf="@id/ViewLabel02"
        app:layout_constraintTop_toBottomOf="@id/ViewButton01"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ViewButton03"
        android:text="@string/go"
        android:width="200dp"
        app:layout_constraintLeft_toRightOf="@id/ViewLabel03"
        app:layout_constraintTop_toBottomOf="@id/ViewLabel02"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ViewButton04"
        android:text="@string/go"
        android:width="200dp"
        app:layout_constraintLeft_toRightOf="@id/ViewLabel04"
        app:layout_constraintTop_toBottomOf="@id/ViewLabel03"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ViewButton05"
        android:text="@string/go"
        android:width="200dp"
        app:layout_constraintLeft_toRightOf="@id/ViewLabel05"
        app:layout_constraintTop_toBottomOf="@id/ViewButton04"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ViewButton06"
        android:text="@string/go"
        android:width="200dp"
        app:layout_constraintLeft_toRightOf="@id/ViewLabel06"
        app:layout_constraintTop_toBottomOf="@id/ViewLabel05"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ViewButton07"
        android:text="@string/go"
        android:width="200dp"
        app:layout_constraintLeft_toRightOf="@id/ViewLabel07"
        app:layout_constraintTop_toBottomOf="@id/ViewLabel06"/>

</androidx.constraintlayout.widget.ConstraintLayout>